# beijinghuoli

./: .gitignore  AGENTS.md  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  admin_user.py  base.py  competition_item.py  match_result.py  match_result_player.py  player.py  player_points.py  team.py  team_member.py  team_points.py  upload_batch.py  versus_match.py  versus_match_player.py
backend/app/routers/: auth.py  dashboard.py  health.py  items.py  matches.py  players.py  public.py  rankings.py  results.py  teams.py  uploads.py
backend/app/schemas/: auth.py  common.py  dashboard.py  item.py  player.py  ranking.py  result.py  team.py  upload.py
backend/app/services/: match_service.py  result_service.py  startup.py
backend/tests/: conftest.py  test_core_flow.py  test_health_auth.py  test_uploads.py
docs/00_setup/: dependency_strategy.md  environment_setup.md  local_dev_commands.md  project_boundary.md  tooling_checklist.md
docs/03_problem_modeling/: mvp_scope.md
docs/04_interaction_design/: admin_workflow.md  main_user_journey.md  state_and_exception_paths.md
docs/05_prd/: mvp_feature_matrix.md  prd-v1.0.md  public_filter_ranking_requirements-v2.1.md
docs/06_architecture/: backend_implementation_summary.md
docs/07_data_model/: business_rules.md  data_model_spec-v1.0.md  field_dictionary.md  (+2 more)
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
(+35 files in other folders)
